fix the scrollbar error

--- a/css/styles.css
+++ b/css/styles.css
@@ -675,7 +675,7 @@ p {
 .partners_container {
   flex: 1 1 auto;
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
 }
