--- a/sass/_partners.scss
+++ b/sass/_partners.scss
@@ -8,7 +8,7 @@
   &_container {
     flex: 1 1 auto;
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
 
